header flickering fixed

--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -16,6 +16,9 @@ body{
     padding: 0;
     margin: 0;
 }
+#header-box{
+  height: 145px;
+}
 .almadar_logo{
 	width: 80px;
 	height: auto;
